--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -7,19 +7,15 @@ const {created, updated} = Astro.props
 
 <Page {...Astro.props}>
   <Fragment slot="post-meta">
-    <time dateTime={isoDate(created)} itemProp="datePublished">
+    <time datetime={isoDate(created)} itemprop="datePublished">
       {shortDate(created)}
     </time>
     {
-      updated && (
-        <>
-          <!-- prettier-ignore -->
-          (updated: <time dateTime={isoDate(updated)} itemProp="dateModified">{shortDate(updated)}</time>)
-        </>
-      )
+      // prettier-ignore
+      updated && <>(updated: <time datetime={isoDate(updated)} itemprop="dateModified">{shortDate(updated)}</time>)</>
     }
   </Fragment>
-  <article itemScope itemType="https://schema.org/CreativeWork">
+  <article itemscope itemtype="https://schema.org/CreativeWork">
     <slot />
   </article>
 </Page>
