--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -17,7 +17,7 @@
   }
 </style>
 
-<nav class={Astro.props.class}>
+<nav {...Astro.props}>
   <a href="/">Home</a>
   <a href="/about">About</a>
 </nav>
