--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -7,7 +7,7 @@ import * as site from '../lib/site'
 export interface Props {
   description?: string
   favicon?: string
-  logo?: string | ImageMetadata
+  logo?: ImageMetadata
   siteTitle?: string
   title?: string
 }
