link logo on index to atari post

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,7 +29,7 @@ const posts = await getPosts()
   }
 </style>
 
-<Page title="Aron Griffis">
+<Page title="Aron Griffis" logoLink="/2016-09-06-atari-basic">
   <ul class="posts">
     {
       posts
