fix missing margin on excerpt

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ const posts = await getPosts()
     }
 
     p.excerpt {
-      margin-bottom: var(--space15);
+      margin-bottom: var(--space1_5);
     }
 
     footer {
