rss link in head

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -54,6 +54,13 @@ const varsHtml = [
     <meta name="description" content={description} />
     <meta property="og:description" content={description} />
 
+    <link
+      rel="alternate"
+      type="application/rss+xml"
+      title="Aron Griffis"
+      href="/rss.xml"
+    />
+
     <link rel="me" href="https://micro.blog/agriffis" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
