--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -54,6 +54,8 @@ const varsHtml = [
     <meta name="description" content={description} />
     <meta property="og:description" content={description} />
 
+    <link rel="sitemap" href="/sitemap-index.xml" />
+
     <link
       rel="alternate"
       type="application/rss+xml"
