better footer layout

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -28,13 +28,13 @@ const copyRange = `${copyStart}${copyStart === copyEnd ? '' : `–${copyEnd}`}`
 <style>
   footer {
     margin-top: var(--space6);
-    padding-top: var(--space4);
+    padding-top: var(--space1);
     padding-bottom: var(--space8);
     border-top: 3px solid;
     border-top-color: var(--accentColor);
     display: flex;
     justify-content: space-between;
-    align-items: baseline;
+    align-items: start;
     font-family: var(--metaFont);
   }
 
